Fix `<hr>` width being wider than parent
`<hr>` has a `1px` border by default on the left and right. This was making the
horizontal scrollbar. See more
[here](https://developer.mozilla.org/en-US/docs/Web/CSS/box-sizing).
I wanted my horizontal rule to extend to the edges of the parent, so I removed
the left and right borders rather than setting `border-box`.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -45,6 +45,8 @@ body {
   margin: 0;
 }
 hr {
+  border-left: none;
+  border-right: none;
   min-width: 100%;
 }
 
